<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.FirstTimeFragment"
    android:paddingHorizontal="12dp"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/header_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá,\nbem-vindo ao MaxCalculadora"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/welcome_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="O app irá lhe auxiliar a realizar alguns cálculos, bem como o de bonificação trimestral, bonificação anual e férias.\n\nPara isso, precisaremos de duas informações suas."
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/header_welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txv_salario_bruto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seu salário base (bruto):"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/salario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_background_card"
        android:inputType="numberDecimal"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:text="R$ 3.000,00"
        app:layout_constraintTop_toBottomOf="@id/txv_salario_bruto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="e claro, seu nome:"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/salario"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_background_card"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        tools:text="Joaquim"
        app:layout_constraintTop_toBottomOf="@id/txv_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>